--- a/style.css
+++ b/style.css
@@ -23,3 +23,18 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
+.answer-cart:hover{
+    cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.3);
+}
+
+.right{
+    background-color: green;
+    color: white;
+}
+
+.false{
+    background-color: red;
+    color: white;
+}
