--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     min-width: 100vh;
 }
 
-.btn{
+.btn1{
     border-radius: 50%;
     color: black;
 }
@@ -37,4 +37,15 @@ body{
 .false{
     background-color: red;
     color: white;
+}
+
+.d-none{
+    display: none;
+}
+
+.centre-endscreen{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
